--- a/client/js/innovation/innovation.scss
+++ b/client/js/innovation/innovation.scss
@@ -546,7 +546,7 @@ a.video-button {
   }
 
   .inn .inn-top {
-    width: 90%;
+    width: 95%;
     margin: 60px auto 0;
   }
 
